# comby-skill

./: .gitignore  PLUGIN-DESIGN.md  README.md  README_PLUGIN.md  example_vulnerable.py  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/clavix/: archive.md  implement.md  improve.md  plan.md  prd.md  refine.md  start.md  summarize.md  verify.md
.clavix/: config.json
.clavix/instructions/workflows/: archive.md  implement.md  improve.md  plan.md  prd.md  refine.md  start.md  summarize.md  verify.md
.clavix/outputs/comby-skill-plugin/: full-prd.md  quick-prd.md  tasks.md
.github/workflows/: test.yml
assets/: example-project.claude.md  search-patterns.json
commands/: comby-analyze.md  comby-inventory.md  comby-search.md
docs/: GREP_INTERFACE_SPEC.md  IMPLEMENTATION-PLAN.md  MEMORY_IMPLEMENTATION_EXAMPLES.md  MEMORY_LAYER_DESIGN.md  MEMORY_LAYER_SUMMARY.md  PATTERN_SUMMARY.md  README.md
docs/01-GETTING-STARTED/: OVERVIEW.md  WORKFLOW_COMPARISON.md
docs/02-ARCHITECTURE/: GRAPH_INTEGRATION.md  MEMORY_LAYER.md  PATTERN_FAMILIES.md
docs/04-REFERENCE/: MEMORY_SUMMARY.md
hooks/: file-change-analysis.js  hook-manifest.json  post-tool-use.js  pre-commit-analysis.js  pre-tool-use.js
references/: EXAMPLES.md  PATTERNS.md  SECURITY-CHECKS.md
scripts/: analyze.py  search.py  utils.py
skills/comby-search/: SKILL.md
spec/: cli_spec.py  pattern_matcher_spec.py  patterns_spec.py  search_spec.py
src/comby_skill/: __init__.py  cli.py  pattern_matcher.py  search_engine.py
src/comby_skill/memory/: __init__.py  api.py  embeddings.py  graph.py  (+1 more)
(+8 files in other folders)
