[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comby-skill"
version = "0.1.0"
description = "Code pattern analysis with Claude AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "argami", email = "argami@example.com"}
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ivoire>=0.2.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
comby-skill = "comby_skill.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
